BUGFIX: cms ui fix alignment of radio buttons and labels in right pane
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@70486 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -6,7 +6,7 @@
 	margin: 7px 0;
 }
 	#right .optionset li {
-		margin: 4px 0;
+		margin: 8px 0;
 	}
 
 /**
@@ -142,6 +142,8 @@
 .right form .htmleditor select, 
 .right form input.action {
 	width: auto;
+	margin-right: 4px;
+	float: left;
 }
 
 .right form ul.optionset {
